--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,6 +1,6 @@
-/* Mobile - 360px */
 @media only screen and (min-width: 0rem) {
-    #mainContent {
+    /* Mobile - 360px */
+    #content {
         padding: var(--sectionPadding);
         background-color: #f7f7f7;
     }
