--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,192 +1,463 @@
+/*-- -------------------------- -->
+<---      Dark Mode Toggle      -->
+<--- -------------------------- -*/
+/* Mobile - 360px */
 @media only screen and (min-width: 0rem) {
-    /* Mobile - 360px */
-    #content {
-        padding: var(--sectionPadding);
-        background-color: #f7f7f7;
+    body.dark-mode #dark-mode-toggle .cs-sun {
+      opacity: 1;
+      transform: translate(-50%, -50%);
     }
-
-    .content-container {
-        width: 100%;
-        /* changes to 1280px at tablet */
-        max-width: 34.375rem;
-        margin: auto;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        /* 48px - 64px */
-        gap: clamp(2rem, 6vw, 1rem);
+    body.dark-mode #dark-mode-toggle .cs-moon {
+      opacity: 0;
+      transform: translate(-50%, -150%);
+      fill: #fff;
     }
-
-    .header-content {
-        text-align: center;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin: 1rem;
+    #dark-mode-toggle {
+      width: 3rem;
+      height: 3rem;
+      padding: 0;
+      background: transparent;
+      border: none;
+      display: block;
+      position: absolute;
+      top: 0.625rem;
+      right: 4.375rem;
+      z-index: 1000;
+      overflow: hidden;
     }
-
-    .card-group-container {
-        width: 100%;
-        margin: 0;
-        padding: 0;
-        display: grid;
-        grid-template-columns: repeat(12, 1fr);
-        align-items: stretch;
-        /* 16px - 20px */
-        gap: clamp(1rem, 2vw, 1.25rem);
+    #dark-mode-toggle img,
+    #dark-mode-toggle svg {
+      width: 1.25rem;
+      height: 1.25rem;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      pointer-events: none;
     }
-
-    .card-group-item {
-        text-align: left;
-        list-style: none;
-        width: 100%;
-        background-color: #fff;
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        grid-column: span 12;
-        position: relative;
-        z-index: 1;
-
+    #dark-mode-toggle .cs-moon {
+      z-index: 2;
+      transition: transform 0.3s, opacity 0.3s;
     }
-
-    .item-title-icon {
-        filter: invert(48%) sepia(13%) saturate(3207%) hue-rotate(130deg) brightness(95%) contrast(80%);
+    #dark-mode-toggle .cs-sun {
+      opacity: 0;
+      z-index: 1;
+      transform: translate(-50%, 100%);
+      transition: transform 0.3s, opacity 0.3s;
     }
-
-    .card-group-item:hover .group-item-picture:before {
-        opacity: 0.8;
+  }
+  /* Desktop - 1024px */
+  @media only screen and (min-width: 64rem) {
+    #dark-mode-toggle {
+      margin: 0;
+      position: relative;
+      top: auto;
+      right: auto;
+      transform: none;
     }
-
-    .card-group-item:hover .group-item-picture img {
-        transform: scale(1.2);
+    #dark-mode-toggle:hover {
+      cursor: pointer;
     }
-
-    .card-group-item:hover .item-title {
-        background-color: var(--primary);
+  }
+  /*-- -------------------------- -->
+  <---     Mobile Navigation      -->
+  <--- -------------------------- -*/
+  /* Mobile - 1023px */
+  @media only screen and (max-width: 63.9375rem) {
+    body.cs-open {
+      overflow: hidden;
     }
-
-    .group-item-picture {
-        width: 100%;
-        /* 180px - 240px */
-        height: clamp(11.25rem, 24vw, 15rem);
-        /* clips the image from overflowing parent on hover */
-        overflow: hidden;
-        display: block;
-        position: relative;
+    #cs-navigation {
+      width: 100%;
+      /* prevents padding and border from affecting height and width */
+      box-sizing: border-box;
+      padding: 0.75rem 1rem;
+      background-color: #fff;
+      box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+      position: fixed;
+      z-index: 10000;
     }
-
-    .group-item-picture:before {
-        /* black hover overlay */
-        content: "";
-        width: 100%;
-        height: 100%;
-        background: #000;
-        opacity: 0;
-        position: absolute;
-        display: block;
-        top: 0;
-        left: 0;
-        transition: opacity 0.3s;
+    #cs-navigation:before {
+      content: "";
+      width: 100%;
+      height: 0vh;
+      background: rgba(0, 0, 0, 0.6);
+      opacity: 0;
+      display: block;
+      position: absolute;
+      top: 100%;
+      right: 0;
+      z-index: -1100;
+      transition: height 0.5s, opacity 0.5s;
+      -webkit-backdrop-filter: blur(10px);
+      backdrop-filter: blur(10px);
     }
-
-    .group-item-picture img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        position: absolute;
-        top: 0;
-        left: 0;
-        z-index: -1;
-        transition: transform 0.65s;
+    #cs-navigation.cs-active:before {
+      height: 150vh;
+      opacity: 1;
     }
-
-    .item-title {
-        /* 20px - 25px */
-        font-size: clamp(1.25rem, 2.5vw, 1.5625rem);
-        line-height: 1.5em;
-        font-weight: 700;
-        text-align: inherit;
-        width: 100%;
-        height: 4em;
-        margin: 0;
-        /* 12px - 16px top & Bottom */
-        /* 16px - 24px left & right */
-        padding: clamp(0.75rem, 1.6vw, 1rem) clamp(1rem, 2.5vw, 1.5rem);
-        /* prevents padding and border from affecting height and width */
-        box-sizing: border-box;
-        background-color: #1a1a1a;
-        color: var(--bodyTextColorWhite);
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
-        /* 8px - 16px */
-        gap: clamp(0.5rem, 1vw, 1rem);
-        transition: background-color 0.3s;
+    #cs-navigation.cs-active .cs-ul-wrapper {
+      opacity: 1;
+      transform: scaleY(1);
+      transition-delay: 0.15s;
     }
-
-    .card-group-item-text {
-        font-size: clamp(0.875rem, 1.5vw, 1rem);
-        line-height: 1.5em;
-        text-align: inherit;
-        width: 100%;
-        margin: 0 0 1.25rem;
-        /* 16px - 24px */
-        padding: clamp(1rem, 2.5vw, 1.25rem);
-        /* prevents padding and border from affecting height and width */
-        box-sizing: border-box;
-        padding-bottom: 0;
-        color: var(--bodyTextColor);
+    #cs-navigation.cs-active .cs-li {
+      opacity: 1;
+      transform: translateY(0);
     }
-
-    .group-item-link {
-        font-size: 1rem;
-        line-height: 1.2em;
-        text-align: inherit;
-        text-decoration: none;
-        font-weight: 700;
-        /* 16px - 24px */
-        margin: 0 0 clamp(1rem, 2.5vw, 1.5rem) clamp(1rem, 2.5vw, 1.5rem);
-        color: var(--primary);
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
-        margin-top: auto;
+    #cs-navigation .cs-container {
+      width: 100%;
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
     }
-
-    .group-item-link:hover .item-link-arrow {
-        transform: translateX(0.25rem);
+    #cs-navigation .cs-logo {
+      width: 40%;
+      max-width: 9.125rem;
+      height: 100%;
+      margin: 0 auto 0 0;
+      /* prevents padding and border from affecting height and width */
+      box-sizing: border-box;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 10;
     }
-
-    .item-link-arrow {
-        width: 1.25rem;
-        height: auto;
-        display: block;
-        transition: transform 0.3s;
+    #cs-navigation .cs-logo img {
+      width: 100%;
+      height: 100%;
+      /* ensures the image never overflows the container. It stays contained within it's width and height and expands to fill it then stops once it reaches an edge */
+      object-fit: contain;
     }
-
-    .footer-content-container {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: 6px;
-        padding: 0;
-        height: 2vh;
-        /* height: fit-content; */
+    #cs-navigation .cs-toggle {
+      /* 44px - 48px */
+      width: clamp(2.75rem, 6vw, 3rem);
+      height: clamp(2.75rem, 6vw, 3rem);
+      margin: 0 0 0 auto;
+      background-color: transparent;
+      border: none;
+      border-radius: 0.25rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
-}
-
-/* Tablet - 768px */
-@media only screen and (min-width: 78rem) {
-    .content-container {
-        max-width: 100rem;
+    #cs-navigation .cs-active .cs-line1 {
+      top: 50%;
+      transform: translate(-50%, -50%) rotate(225deg);
     }
-
-    .card-group-container {
-        grid-template-columns: repeat(16, minmax(auto, 1fr));
+    #cs-navigation .cs-active .cs-line2 {
+      top: 50%;
+      transform: translate(-50%, -50%) translateY(0) rotate(-225deg);
+      transform-origin: center;
     }
-
-    .card-group-item {
-        grid-column: span 4;
+    #cs-navigation .cs-active .cs-line3 {
+      opacity: 0;
+      bottom: 100%;
     }
-}
+    #cs-navigation .cs-box {
+      /* 24px - 28px */
+      width: clamp(1.5rem, 2vw, 1.75rem);
+      /* 14px - 16px */
+      height: clamp(0.875rem, 1.5vw, 1rem);
+      position: relative;
+    }
+    #cs-navigation .cs-line {
+      width: 100%;
+      height: 2px;
+      background-color: #1a1a1a;
+      border-radius: 2px;
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+    #cs-navigation .cs-line1 {
+      top: 0;
+      transition: transform 0.5s, top 0.3s, left 0.3s;
+      animation-duration: 0.7s;
+      animation-timing-function: ease;
+      animation-direction: normal;
+      animation-fill-mode: forwards;
+      transform-origin: center;
+    }
+    #cs-navigation .cs-line2 {
+      top: 50%;
+      transform: translateX(-50%) translateY(-50%);
+      transition: top 0.3s, left 0.3s, transform 0.5s;
+      animation-duration: 0.7s;
+      animation-timing-function: ease;
+      animation-direction: normal;
+      animation-fill-mode: forwards;
+    }
+    #cs-navigation .cs-line3 {
+      bottom: 0;
+      transition: bottom 0.3s, opacity 0.3s;
+    }
+    #cs-navigation .cs-ul-wrapper {
+      width: 100%;
+      height: auto;
+      padding-bottom: 2.4em;
+      background-color: #fff;
+      box-shadow: inset rgba(0, 0, 0, 0.2) 0px 8px 24px;
+      opacity: 0;
+      position: absolute;
+      top: 100%;
+      left: 0;
+      z-index: -1;
+      overflow: hidden;
+      transform: scaleY(0);
+      transition: transform 0.4s, opacity 0.3s;
+      transform-origin: top;
+    }
+    #cs-navigation .cs-ul {
+      width: 100%;
+      height: auto;
+      max-height: 65vh;
+      margin: 0;
+      padding: 3rem 0 0 0;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
+      gap: 1.25rem;
+      overflow: scroll;
+    }
+    #cs-navigation .cs-li {
+      text-align: center;
+      list-style: none;
+      width: 100%;
+      margin-right: 0;
+      opacity: 0;
+      /* transition from these values */
+      transform: translateY(-4.375rem);
+      transition: transform 0.6s, opacity 0.9s;
+    }
+    #cs-navigation .cs-li:nth-of-type(1) {
+      transition-delay: 0.05s;
+    }
+    #cs-navigation .cs-li:nth-of-type(2) {
+      transition-delay: 0.1s;
+    }
+    #cs-navigation .cs-li:nth-of-type(3) {
+      transition-delay: 0.15s;
+    }
+    #cs-navigation .cs-li:nth-of-type(4) {
+      transition-delay: 0.2s;
+    }
+    #cs-navigation .cs-li:nth-of-type(5) {
+      transition-delay: 0.25s;
+    }
+    #cs-navigation .cs-li:nth-of-type(6) {
+      transition-delay: 0.3s;
+    }
+    #cs-navigation .cs-li:nth-of-type(7) {
+      transition-delay: 0.35s;
+    }
+    #cs-navigation .cs-li:nth-of-type(8) {
+      transition-delay: 0.4s;
+    }
+    #cs-navigation .cs-li:nth-of-type(9) {
+      transition-delay: 0.45s;
+    }
+    #cs-navigation .cs-li:nth-of-type(10) {
+      transition-delay: 0.5s;
+    }
+    #cs-navigation .cs-li:nth-of-type(11) {
+      transition-delay: 0.55s;
+    }
+    #cs-navigation .cs-li:nth-of-type(12) {
+      transition-delay: 0.6s;
+    }
+    #cs-navigation .cs-li:nth-of-type(13) {
+      transition-delay: 0.65s;
+    }
+    #cs-navigation .cs-li-link {
+      /* 16px - 24px */
+      font-size: clamp(1rem, 2.5vw, 1.5rem);
+      line-height: 1.2em;
+      text-decoration: none;
+      margin: 0;
+      color: var(--headerColor);
+      display: inline-block;
+      position: relative;
+    }
+    #cs-navigation .cs-li-link:before {
+      /* active state underline */
+      content: "";
+      width: 100%;
+      height: 1px;
+      background: currentColor;
+      opacity: 1;
+      display: none;
+      position: absolute;
+      bottom: -0.125rem;
+      left: 0;
+    }
+    #cs-navigation .cs-li-link.cs-active:before {
+      display: block;
+    }
+    #cs-navigation .cs-button-solid {
+      display: none;
+    }
+  }
+  /* Dark Mode */
+  @media only screen and (max-width: 63.9375rem) {
+    body.dark-mode #cs-navigation {
+      background-color: var(--dark);
+    }
+    body.dark-mode #cs-navigation .cs-logo {
+      /* makes it white */
+      filter: grayscale(1) brightness(1000%);
+    }
+    body.dark-mode #cs-navigation .cs-line {
+      background-color: #fff;
+    }
+    body.dark-mode #cs-navigation .cs-ul-wrapper {
+      background-color: var(--medium);
+    }
+    body.dark-mode #cs-navigation .cs-li-link {
+      color: var(--bodyTextColorWhite);
+    }
+  }
+  /*-- -------------------------- -->
+  <---     Desktop Navigation     -->
+  <--- -------------------------- -*/
+  /* Small Desktop - 1024px */
+  @media only screen and (min-width: 64rem) {
+    #cs-navigation {
+      width: 100%;
+      /* prevents padding and border from affecting height and width */
+      box-sizing: border-box;
+      padding: 0 1rem;
+      background-color: #fff;
+      box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+      position: fixed;
+      z-index: 10000;
+    }
+    #cs-navigation .cs-container {
+      width: 100%;
+      max-width: 80rem;
+      margin: auto;
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      gap: 1.5rem;
+    }
+    #cs-navigation .cs-toggle {
+      display: none;
+    }
+    #cs-navigation .cs-logo {
+      width: 18.4%;
+      max-width: 21.875rem;
+      height: 4.0625rem;
+      /* margin-right auto pushes everything away from it to the right */
+      margin: 0 auto 0 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 100;
+    }
+    #cs-navigation .cs-logo img {
+      width: 100%;
+      height: 100%;
+      /* ensures the image never overflows the container. It stays contained within it's width and height and expands to fill it then stops once it reaches an edge */
+      object-fit: contain;
+    }
+    #cs-navigation .cs-ul {
+      width: 100%;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      /* 20px - 36px */
+      gap: clamp(1.25rem, 2.6vw, 2.25rem);
+    }
+    #cs-navigation .cs-li {
+      list-style: none;
+      padding: 2rem 0;
+      /* prevent flexbox from squishing it */
+      flex: none;
+    }
+    #cs-navigation .cs-li-link {
+      /* 14px - 16px */
+      font-size: clamp(0.875rem, 1vw, 1rem);
+      line-height: 1.5em;
+      text-decoration: none;
+      margin: 0;
+      color: var(--bodyTextColor);
+      display: block;
+      position: relative;
+    }
+    #cs-navigation .cs-li-link:hover:before {
+      width: 100%;
+    }
+    #cs-navigation .cs-li-link.cs-active:before {
+      width: 100%;
+    }
+    #cs-navigation .cs-li-link:before {
+      /* active state underline */
+      content: "";
+      width: 0%;
+      height: 2px;
+      background: var(--primary);
+      opacity: 1;
+      display: block;
+      position: absolute;
+      bottom: 0rem;
+      left: 0;
+      transition: width 0.3s;
+    }
+    #cs-navigation .cs-button-solid {
+      font-size: 1rem;
+      font-weight: 700;
+      /* 46px - 56px */
+      line-height: clamp(2.875em, 5.5vw, 3.5em);
+      text-align: center;
+      text-decoration: none;
+      min-width: 9.375rem;
+      margin: 0;
+      /* prevents padding from adding to the width */
+      box-sizing: border-box;
+      padding: 0 1.5rem;
+      color: #fff;
+      background-color: var(--primary);
+      border-radius: 0.25rem;
+      display: inline-block;
+      position: relative;
+      z-index: 1;
+    }
+    #cs-navigation .cs-button-solid:before {
+      content: "";
+      width: 0%;
+      height: 100%;
+      background: #000;
+      opacity: 1;
+      border-radius: 0.25rem;
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: -1;
+      transition: width 0.3s;
+    }
+    #cs-navigation .cs-button-solid:hover:before {
+      width: 100%;
+    }
+  }
+  /* Dark Mode */
+  @media only screen and (min-width: 64rem) {
+    body.dark-mode #cs-navigation {
+      background-color: var(--dark);
+    }
+    body.dark-mode #cs-navigation .cs-logo {
+      /* makes it turn white */
+      filter: grayscale(1) brightness(1000%);
+    }
+    body.dark-mode #cs-navigation .cs-li-link {
+      color: var(--bodyTextColorWhite);
+    }
+    body.dark-mode #cs-navigation .cs-li-link:before {
+      background-color: var(--primaryLight);
+    }
+  }
