--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,73 +1,4 @@
 /*-- -------------------------- -->
-<---      Dark Mode Toggle      -->
-<--- -------------------------- -*/
-/* Mobile - 360px */
-@media only screen and (min-width: 0rem) {
-    body.dark-mode #dark-mode-toggle .cs-sun {
-        opacity: 1;
-        transform: translate(-50%, -50%);
-    }
-
-    body.dark-mode #dark-mode-toggle .cs-moon {
-        opacity: 0;
-        transform: translate(-50%, -150%);
-        fill: #fff;
-    }
-
-    #dark-mode-toggle {
-        width: 3rem;
-        height: 3rem;
-        padding: 0;
-        background: transparent;
-        border: none;
-        display: block;
-        position: absolute;
-        top: 0.625rem;
-        right: 4.375rem;
-        z-index: 1000;
-        overflow: hidden;
-    }
-
-    #dark-mode-toggle img,
-    #dark-mode-toggle svg {
-        width: 1.25rem;
-        height: 1.25rem;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        pointer-events: none;
-    }
-
-    #dark-mode-toggle .cs-moon {
-        z-index: 2;
-        transition: transform 0.3s, opacity 0.3s;
-    }
-
-    #dark-mode-toggle .cs-sun {
-        opacity: 0;
-        z-index: 1;
-        transform: translate(-50%, 100%);
-        transition: transform 0.3s, opacity 0.3s;
-    }
-}
-
-/* Desktop - 1024px */
-@media only screen and (min-width: 64rem) {
-    #dark-mode-toggle {
-        margin: 0;
-        position: relative;
-        top: auto;
-        right: auto;
-        transform: none;
-    }
-
-    #dark-mode-toggle:hover {
-        cursor: pointer;
-    }
-}
-
-/*-- -------------------------- -->
   <---     Mobile Navigation      -->
   <--- -------------------------- -*/
 /* Mobile - 1023px */
@@ -83,8 +14,8 @@
         padding: 0.75rem 1rem;
         background-color: #fff;
         box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-        position: fixed;
-        z-index: 10000;
+        /* position: fixed;
+        z-index: 10000; */
     }
 
     #cs-navigation:before {
@@ -370,8 +301,8 @@
         padding: 0 1rem;
         background-color: #fff;
         box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-        position: fixed;
-        z-index: 10000;
+        /* position: fixed;
+        z-index: 10000; */
     }
 
     #cs-navigation .cs-container {
@@ -389,13 +320,16 @@
     }
 
     #cs-navigation .page-title {
-        width: 18.4%;
-        max-width: 21.875rem;
+        width: 30%;
+        max-width: 30rem;
         height: 7rem;
         display: flex;
         justify-content: center;
         align-items: center;
         z-index: 100;
+    }
+    #cs-navigation .page-title h1 {
+        font-size: 3em;
     }
 
     #cs-navigation .cs-ul {
@@ -466,5 +400,204 @@
 
     body.dark-mode #cs-navigation .cs-li-link:before {
         background-color: var(--primaryLight);
+    }
+}
+
+/*-- -------------------------- -->
+<---   Side By Side Reverse     -->
+<--- -------------------------- -*/
+
+/* Mobile - 360px */
+@media only screen and (min-width: 0rem) {
+    #home-content {
+        padding: var(--sectionPadding);
+    }
+
+    #home-content .cs-container {
+        width: 100%;
+        /* changes to 1280px at tablet */
+        max-width: 36.5rem;
+        margin: auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        /* 48px - 64px */
+        gap: clamp(3rem, 6vw, 4rem);
+    }
+
+    #home-content .cs-content {
+        /* set text align to left if content needs to be left aligned */
+        text-align: left;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        /* centers content horizontally, set to flex-start to left align */
+        align-items: flex-start;
+    }
+
+    #home-content .cs-topper {
+        font-size: var(--topperFontSize);
+        line-height: 1.2em;
+        text-transform: uppercase;
+        text-align: inherit;
+        letter-spacing: .1em;
+        font-weight: 700;
+        color: var(--primary);
+        margin-bottom: 0.25rem;
+        display: block;
+    }
+
+    #home-content .cs-title {
+        font-size: var(--headerFontSize);
+        font-weight: 900;
+        line-height: 1.2em;
+        text-align: inherit;
+        max-width: 43.75rem;
+        margin: 0 0 1rem 0;
+        color: var(--headerColor);
+        position: relative;
+    }
+
+    #home-content .cs-text {
+        font-size: var(--bodyFontSize);
+        line-height: 1.5em;
+        text-align: inherit;
+        width: 100%;
+        max-width: 40.625rem;
+        margin: 0;
+        color: var(--bodyTextColor);
+    }
+
+    #home-content .cs-text {
+        /* Override.  cs-topper cs-title and first cs-text should be removed and put into your global css sheet so it can control every instance of them on your site and is consistent. This selector is a section specific override that stays inside this stitch */
+        margin-bottom: 1rem;
+    }
+
+    #home-content .cs-text:last-of-type {
+        margin-bottom: 2rem;
+    }
+
+    #home-content .cs-picture {
+        width: 100%;
+        display: block;
+        position: relative;
+        z-index: 1;
+    }
+
+    #home-content .cs-picture img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+
+    #home-content .cs-picture-right {
+        height: 95vw;
+        max-height: 25rem;
+    }
+
+    #home-content .cs-picture-left {
+        height: 111vw;
+        max-height: 31.25rem;
+    }
+
+    #home-content .cs-stats-group {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        /* 28px - 40px */
+        gap: clamp(1.75rem, 3vw, 2.5rem);
+    }
+
+    #home-content .cs-stats {
+        width: 100%;
+        max-width: 39.375rem;
+        padding: 0;
+        margin: 0;
+        display: grid;
+        grid-template-columns: repeat(12, 1fr);
+        row-gap: 1.5rem;
+        column-gap: 0.75rem;
+    }
+
+    #home-content .cs-stat {
+        list-style: none;
+        margin: 0;
+        padding: 0 0 1.5rem 0;
+        border-bottom: 1px solid var(--primary);
+        /* making flex so we can align a heading with 1 line to the bottom */
+        display: flex;
+        grid-column: span 4;
+        flex-direction: column;
+        align-self: stretch;
+        align-content: space-between;
+    }
+
+    #home-content .cs-number {
+        /* 31px - 39px */
+        font-size: clamp(1.9375rem, 3vw, 2.4375rem);
+        line-height: 1.2em;
+        font-weight: 700;
+        text-align: left;
+        color: var(--headerColor);
+        display: block;
+        margin: 0 0 0.25rem 0;
+    }
+
+    #home-content .cs-desc {
+        font-size: 1rem;
+        line-height: 1.5em;
+        font-weight: 400;
+        text-align: left;
+        /* auto margin top will push text to bottom if there's only one line */
+        margin: 0;
+        color: var(--bodyTextColor);
+    }
+}
+
+/* Tablet - 768px */
+@media only screen and (min-width: 48rem) {
+    #home-content .cs-container {
+        max-width: 80rem;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: stretch;
+    }
+
+    #home-content .cs-content {
+        /* sends it to the right in the 2nd position */
+        order: 2;
+    }
+
+    #home-content .cs-picture-right {
+        /* 340px - 460px */
+        min-height: clamp(21.25rem, 35vw, 28.75rem);
+        height: 100%;
+        max-height: 100%;
+    }
+
+    #home-content .cs-picture-left {
+        /* 530px - 660px */
+        min-height: clamp(33.125rem, 45vw, 41.25rem);
+        height: 100%;
+        max-height: 100%;
+    }
+}
+
+/* Dark Mode */
+@media only screen and (min-width: 0rem) {
+
+    body.dark-mode #home-content .cs-title,
+    body.dark-mode #home-content .cs-text,
+    body.dark-mode #home-content .cs-number,
+    body.dark-mode #home-content .cs-desc {
+        color: var(--bodyTextColorWhite);
+    }
+
+    body.dark-mode #home-content .cs-text,
+    body.dark-mode #home-content .cs-desc {
+        opacity: .8;
     }
 }
