--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -9,7 +9,6 @@
 
     #cs-navigation {
         width: 100%;
-        /* prevents padding and border from affecting height and width */
         box-sizing: border-box;
         padding: 0.75rem 1rem;
         background-color: #fff;
@@ -328,6 +327,7 @@
         align-items: center;
         z-index: 100;
     }
+
     #cs-navigation .page-title h1 {
         font-size: 3em;
     }
@@ -435,41 +435,7 @@
         align-items: flex-start;
     }
 
-    #home-content .cs-topper {
-        font-size: var(--topperFontSize);
-        line-height: 1.2em;
-        text-transform: uppercase;
-        text-align: inherit;
-        letter-spacing: .1em;
-        font-weight: 700;
-        color: var(--primary);
-        margin-bottom: 0.25rem;
-        display: block;
-    }
-
-    #home-content .cs-title {
-        font-size: var(--headerFontSize);
-        font-weight: 900;
-        line-height: 1.2em;
-        text-align: inherit;
-        max-width: 43.75rem;
-        margin: 0 0 1rem 0;
-        color: var(--headerColor);
-        position: relative;
-    }
-
     #home-content .cs-text {
-        font-size: var(--bodyFontSize);
-        line-height: 1.5em;
-        text-align: inherit;
-        width: 100%;
-        max-width: 40.625rem;
-        margin: 0;
-        color: var(--bodyTextColor);
-    }
-
-    #home-content .cs-text {
-        /* Override.  cs-topper cs-title and first cs-text should be removed and put into your global css sheet so it can control every instance of them on your site and is consistent. This selector is a section specific override that stays inside this stitch */
         margin-bottom: 1rem;
     }
 
@@ -599,5 +565,113 @@
     body.dark-mode #home-content .cs-text,
     body.dark-mode #home-content .cs-desc {
         opacity: .8;
+    }
+}
+
+/*-- -------------------------- -->
+<---           Footer           -->
+<--- -------------------------- -*/
+
+/* Mobile - 360px */
+@media only screen and (min-width: 0rem) {
+    #cs-footer-108 {
+        /* 40px - 100px top and bottom */
+        padding: clamp(1rem, 4.9vw, 2.25rem) 1rem;
+        /* 40px - 50px */
+        padding-bottom: clamp(1.5rem, 6.9vw, 2.125rem);
+    }
+
+    #cs-footer-108 .cs-container {
+        width: 100%;
+        max-width: 80rem;
+        margin: auto;
+    }
+
+    #cs-footer-108 .cs-ul {
+        /* 40px - 60px*/
+        padding: 0 0 clamp(2rem, 4.7vw, .75rem);
+        margin: auto;
+        border-bottom: 1px solid #eff0f6;
+    }
+
+    #cs-footer-108 .cs-li {
+        list-style: none;
+        text-align: center;
+        margin-bottom: 1.25rem;
+    }
+
+    #cs-footer-108 .cs-li:last-of-type {
+        margin-bottom: 0;
+    }
+
+    #cs-footer-108 .cs-link {
+        /* 16px - 20px */
+        font-size: clamp(0.8rem, 0.15s, 1rem);
+        line-height: 1.5em;
+        text-decoration: none;
+        font-weight: 700;
+        color: var(--bodyTextColor);
+        position: relative;
+    }
+
+    #cs-footer-108 .cs-link:hover:before {
+        width: 100%;
+    }
+
+    #cs-footer-108 .cs-link:before {
+        /* top right box */
+        content: "";
+        width: 0%;
+        height: 0.1875rem;
+        background: var(--bodyTextColor);
+        opacity: 1;
+        position: absolute;
+        display: block;
+        bottom: -0.125rem;
+        left: 0;
+        transition: width 0.3s;
+    }
+
+    #cs-footer-108 .cs-copyright {
+        /* 14px - 16px */
+        font-size: clamp(0.875rem, 1.6vw, 1rem);
+        text-align: center;
+        color: #a0a3bd;
+        display: block;
+        /* 20px - 28px */
+        margin: clamp(1.25rem, 2.8vw, 1.75rem) auto 0;
+    }
+}
+
+/* Tablet - 600px */
+@media only screen and (min-width: 37.5rem) {
+    #cs-footer-108 .cs-ul {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #cs-footer-108 .cs-li {
+        /* 44px - 88px */
+        margin: 0 clamp(2.75rem, 6.2vw, 5.5rem) 0 0;
+    }
+
+    #cs-footer-108 .cs-li:last-of-type {
+        margin: 0;
+    }
+}
+
+/* Dark Mode */
+@media only screen and (min-width: 0rem) {
+    body.dark-mode #cs-footer-108 {
+        background-color: rgba(0, 0, 0, 0.2);
+    }
+
+    body.dark-mode #cs-footer-108 .cs-link {
+        color: #fff;
+    }
+
+    body.dark-mode #cs-footer-108 .cs-link:before {
+        background: #fff;
     }
 }
