--- a/src/styles/dark.css
+++ b/src/styles/dark.css
@@ -24,7 +24,9 @@
     body.dark-mode h6,
     body.dark-mode .cs-title,
     body.dark-mode .cs-text,
-    body.dark-mode .cs-li {
+    body.dark-mode .cs-li,
+    body.dark-mode .cs-h3,
+    body.dark-mode .cs-item-p {
         color: var(--bodyTextColorWhite);
     }
 
@@ -109,6 +111,7 @@
         margin-left: 1.875rem;
         margin-bottom: 0rem;
     }
+
     #dark-mode-toggle:hover {
         cursor: pointer;
     }
