Added page switching

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -84,3 +84,7 @@ footer {
     text-decoration: none;
     color: var(--headerColorMedium);
 }
+
+#cs-navigation .cs-li-link {
+    cursor: pointer;
+}
