--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -13,8 +13,8 @@
         padding: 0.75rem 1rem;
         background-color: #fff;
         box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-        /* position: fixed;
-        z-index: 10000; */
+        position: fixed;
+        z-index: 10000;
     }
 
     #cs-navigation:before {
