--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -13,8 +13,8 @@
         padding: 0.75rem 1rem;
         background-color: #fff;
         box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-        position: fixed;
-        z-index: 10000;
+        /* position: fixed;
+        z-index: 10000; */
     }
 
     #cs-navigation:before {
@@ -409,11 +409,11 @@
 
 /* Mobile - 360px */
 @media only screen and (min-width: 0rem) {
-    #home-content {
+    #home-content-container {
         padding: var(--sectionPadding);
     }
 
-    #home-content .cs-container {
+    #home-content-container .home-content {
         width: 100%;
         /* changes to 1280px at tablet */
         max-width: 36.5rem;
@@ -425,7 +425,7 @@
         gap: clamp(3rem, 6vw, 4rem);
     }
 
-    #home-content .cs-content {
+    #home-content-container .cs-content {
         /* set text align to left if content needs to be left aligned */
         text-align: left;
         width: 100%;
@@ -435,22 +435,22 @@
         align-items: flex-start;
     }
 
-    #home-content .cs-text {
+    #home-content-container .cs-text {
         margin-bottom: 1rem;
     }
 
-    #home-content .cs-text:last-of-type {
+    #home-content-container .cs-text:last-of-type {
         margin-bottom: 2rem;
     }
 
-    #home-content .cs-picture {
+    #home-content-container .cs-picture {
         width: 100%;
         display: block;
         position: relative;
         z-index: 1;
     }
 
-    #home-content .cs-picture img {
+    #home-content-container .cs-picture img {
         width: 100%;
         height: 100%;
         object-fit: cover;
@@ -459,17 +459,17 @@
         left: 0;
     }
 
-    #home-content .cs-picture-right {
+    #home-content-container .cs-picture-right {
         height: 95vw;
         max-height: 25rem;
     }
 
-    #home-content .cs-picture-left {
+    #home-content-container .cs-picture-left {
         height: 111vw;
         max-height: 31.25rem;
     }
 
-    #home-content .cs-stats-group {
+    #home-content-container .home-content-left {
         width: 100%;
         display: flex;
         flex-direction: column;
@@ -477,7 +477,7 @@
         gap: clamp(1.75rem, 3vw, 2.5rem);
     }
 
-    #home-content .cs-stats {
+    #home-content-container .cs-stats {
         width: 100%;
         max-width: 39.375rem;
         padding: 0;
@@ -488,7 +488,7 @@
         column-gap: 0.75rem;
     }
 
-    #home-content .cs-stat {
+    #home-content-container .cs-stat {
         list-style: none;
         margin: 0;
         padding: 0 0 1.5rem 0;
@@ -501,7 +501,7 @@
         align-content: space-between;
     }
 
-    #home-content .cs-number {
+    #home-content-container .cs-number {
         /* 31px - 39px */
         font-size: clamp(1.9375rem, 3vw, 2.4375rem);
         line-height: 1.2em;
@@ -512,7 +512,7 @@
         margin: 0 0 0.25rem 0;
     }
 
-    #home-content .cs-desc {
+    #home-content-container .cs-desc {
         font-size: 1rem;
         line-height: 1.5em;
         font-weight: 400;
@@ -525,26 +525,26 @@
 
 /* Tablet - 768px */
 @media only screen and (min-width: 48rem) {
-    #home-content .cs-container {
+    #home-content-container .home-content {
         max-width: 80rem;
         flex-direction: row;
         justify-content: space-between;
         align-items: stretch;
     }
 
-    #home-content .cs-content {
+    #home-content-container .cs-content {
         /* sends it to the right in the 2nd position */
         order: 2;
     }
 
-    #home-content .cs-picture-right {
+    #home-content-container .cs-picture-right {
         /* 340px - 460px */
         min-height: clamp(21.25rem, 35vw, 28.75rem);
         height: 100%;
         max-height: 100%;
     }
 
-    #home-content .cs-picture-left {
+    #home-content-container .cs-picture-left {
         /* 530px - 660px */
         min-height: clamp(33.125rem, 45vw, 41.25rem);
         height: 100%;
@@ -555,15 +555,15 @@
 /* Dark Mode */
 @media only screen and (min-width: 0rem) {
 
-    body.dark-mode #home-content .cs-title,
-    body.dark-mode #home-content .cs-text,
-    body.dark-mode #home-content .cs-number,
-    body.dark-mode #home-content .cs-desc {
+    body.dark-mode #home-content-container .cs-title,
+    body.dark-mode #home-content-container .cs-text,
+    body.dark-mode #home-content-container .cs-number,
+    body.dark-mode #home-content-container .cs-desc {
         color: var(--bodyTextColorWhite);
     }
 
-    body.dark-mode #home-content .cs-text,
-    body.dark-mode #home-content .cs-desc {
+    body.dark-mode #home-content-container .cs-text,
+    body.dark-mode #home-content-container .cs-desc {
         opacity: .8;
     }
 }
