Added contacts page loader

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -952,6 +952,28 @@
 
     }
 
+    #contact-strip-324 .cs-container {
+        width: 100%;
+        max-width: 80em;
+        margin: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        /* 48px - 64px */
+        gap: clamp(3rem, 7vw, 4rem);
+    }
+
+    #contact-strip-324 .cs-content {
+        /* set text align to left if content needs to be left aligned */
+        text-align: center;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        /* centers content horizontally, set to flex-start to left align */
+        align-items: center;
+    }
+
     #contact-strip-324 .cs-stat-group {
         width: 100%;
         /* changes to 1280px at desktop */
