--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,4 @@
+/* Global Styles and Variables */
 :root {
     --primary: #ff6a3e;
     --primaryLight: #ffba43;
@@ -7,14 +8,10 @@
     --headerColorDark: #082032;
     --headerColorMedium: #2c394b;
     --bodyTextColor: #4e4b66;
-    --bodyTextColorWhite: #fafbfc;
     --bodyTextColorGray: #313131;
-    /* 13px - 16px */
     --topperFontSize: clamp(0.8125rem, 1.6vw, 1rem);
-    /* 31px - 49px */
     --headerFontSize: clamp(1rem, 2vw, 2rem);
     --bodyFontSize: 1rem;
-    /* 60px - 100px top and bottom */
     --sectionPadding: clamp(3.75rem, 7.82vw, 6.25rem) 1rem;
 }
 
@@ -22,6 +19,9 @@ body {
     margin: 0;
     padding: 0;
     height: auto;
+    font-size: var(--bodyFontSize);
+    color: var(--bodyTextColor);
+    background-color: #fff; /* Default background color */
 }
 
 #content {
@@ -36,51 +36,38 @@ footer {
     bottom: 0;
     width: 100%;
     font-family: inherit;
-    /* height: 1rem; */
 }
 
 *,
 *:before,
 *:after {
-    /* prevents padding from affecting height and width */
     box-sizing: border-box;
+}
+
+/* Basic Typography */
+.cs-topper, .cs-title, .cs-text {
+    text-align: inherit;
 }
 
 .cs-topper {
     font-size: var(--topperFontSize);
-    line-height: 1.2em;
-    text-transform: uppercase;
-    text-align: inherit;
-    letter-spacing: .1em;
     font-weight: 700;
     color: var(--primary);
     margin-bottom: 0.25rem;
-    display: block;
 }
 
 .cs-title {
     font-size: var(--headerFontSize);
     font-weight: 900;
-    line-height: 1.2em;
-    text-align: inherit;
-    max-width: 43.75rem;
-    margin: 0 0 1rem 1rem;
     color: var(--headerColor);
-    position: relative;
 }
 
 .cs-text {
-    font-size: var(--bodyFontSize);
-    line-height: 1.5em;
-    text-align: inherit;
-    width: 100%;
-    max-width: 40.625rem;
-    margin: 0;
     color: var(--bodyTextColor);
 }
 
-#cs-navigation .page-title,
-#cs-navigation>.page-title:visited {
+/* Navigation Links */
+#cs-navigation .page-title, #cs-navigation>.page-title:visited {
     text-decoration: none;
     color: var(--headerColorMedium);
 }
