--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -699,7 +699,7 @@
         height: 100%;
         width: 100%;
         opacity: 0.08;
-        background: url("https://csimg.nyc3.cdn.digitaloceanspaces.com/Food-Menu/static-pattern.png");
+        background: url("https://csimg.nyc3.cdn.digitaloceanspaces.com/Food-Menu/static-pattern.jpg");
         background-size: auto;
         background-position: center;
         background-repeat: repeat;
